--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 		
 		<meta itemprop="name" content="MetiCore" />
-		<meta itemprop="url" content="https://meticore.best" />
+		<meta itemprop="url" content="#" />
 
 											<link rel="pingback" href="https://meticore.best/xmlrpc.php" />
 	<script type="text/javascript">document.documentElement.className = document.documentElement.className.replace( /\bno-js\b/,'js' );</script>
