--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ h6 { font-family: 'Domine'; font-weight: 700; font-size: 16px; color: #242628; }
 							<div class="logo-wrap">
 								
 																			<h1 id="logo" class="text-logo" itemprop="headline">
-											<a href="https://meticore.best" data-wpel-link="internal">MetiCore</a>
+											<a href="#" data-wpel-link="internal">MetiCore</a>
 										</h1><!-- END #logo -->
 																								</div>
 					 								</div>
